just commit it once in a while

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,13 +6,13 @@
             (mousedown)="home($event)">
             Home
     </button>
-    <button #tooltip="matTooltip"
+    <a #tooltip="matTooltip"
             (mousedown)="pdf($event, '/assets/CV_Hannes_Stark.pdf')"
             mat-button
             matTooltip="Get my CV as PDF document"
             class="mat-button">
       CV as PDF
-    </button>
+    </a>
   </div>
   <div fxHide.lt-md fxFlex="60">
     <div fxFlex="70" fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="end center">
@@ -41,15 +41,15 @@
             (mousedown)="home($event)">
             Home
     </button>
-    <button #tooltip="matTooltip"
-            (mousedown)="pdf($event, '/assets/cv_hannes_stark.pdf')"
+    <a #tooltip="matTooltip"
+            (mousedown)="pdf($event, '/assets/CV_Hannes_Stark.pdf')"
             mat-button
             matTooltip="Get my CV as PDF document"
             class="mat-button">
       CV as PDF
-    </button>
+    </a>
   </div>
-  <div fxHide.gt-sm fxFlex="50" fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="end center">
+  <div fxHide.gt-sm fxFlex="50" fxLayout="row" fxLayoutGap.gt-xs="10px" fxLayoutAlign="end center">
 
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon"
             (mousedown)="goToLink($event, 'https://github.com/HannesStark')">
@@ -72,23 +72,23 @@
 </mat-toolbar>
 <!--For when there are more buttons-->
 <!--
-<mat-toolbar fxHide.gt-xs fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="center center">
+<mat-toolbar class="smaller" fxHide.gt-xs fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="center center">
 
-  <button #tooltip="matTooltip"
-          *ngFor="let button of buttons" mat-button
-          matTooltip={{button.tooltip}}
-          [routerLink]="button.route" class="mat-button">
-    {{button.text}}
-  </button>
-  <button #tooltip="matTooltip"
-          (click)="pdf($event, '/assets/cv_hannes_stark.pdf')"
-          mat-button
-          matTooltip="Get my CV as PDF document"
-          class="mat-button">
-    CV as PDF
-  </button>
+  <button #tooltip="matTooltip" mat-button
+            matTooltip="My personal information"
+            [routerLink]="" class="mat-button"
+            (mousedown)="home($event)">
+            Home
+    </button>
+    <a #tooltip="matTooltip"
+            (mousedown)="pdf($event, '/assets/CV_Hannes_Stark.pdf')"
+            mat-button
+            matTooltip="Get my CV as PDF document"
+            class="mat-button">
+      CV as PDF
+    </a>
 </mat-toolbar>
-<mat-toolbar fxHide.gt-xs fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="center center">
+<mat-toolbar class="smaller" fxHide.gt-xs fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="center center">
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon"
           (mousedown)="goToLink($event, 'https://github.com/HannesStark')">
     <fa-icon class="icon" [icon]="github"></fa-icon>
@@ -106,8 +106,8 @@
     <fa-icon class="icon" [icon]="mail"></fa-icon>
   </button>
 </mat-toolbar>
--->
 
+-->
 
 
 
