--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,17 +1,17 @@
 <div fxLayout="column" fxLayoutAlign="center center" ngClass.lt-md="text-align-center">
   <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center center">
     <div fxFlex="30" fxLayoutAlign="end center" fxLayoutAlign.lt-md="center center">
-      <img class="profile-image" src="assets/Allianz vor Hecke squareUpCloser.jpg" alt="Profile Image">
+      <img class="profile-image" src="assets/Allianz%20vor%20Hecke%20webformat.jpg" alt="Profile Image">
     </div>
     <div fxFlex="60" ngClass.sm="small-margin" ngClass.xs="small-margin--xs">
-      <div fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
+      <div fxFlex.lt-md="auto" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
         <h1 class="Name">Hannes Stärk</h1>
         <!--
         <div class="underline-title--top" fxLayoutAlign.lt-md="center center">
           <h1 class="left-titles">M. Sc. Computer Science Student</h1>
         </div>
         -->
-        <div class="item" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
+        <div class="item"  fxLayout="column" fxLayoutAlign.lt-md="center center">
           <p class="text-align-left">
             Hi there! I am a 21 years old M. Sc. Computer Science student from Germany at TU Munich.
             <br>
@@ -27,21 +27,21 @@
           </p>
 
           <div fxLayout="row" fxLayout.xs="column">
-            <a class="socials-links link-style" (mousedown)="goToLink($event, 'https://github.com/HannesStark')">
-              <fa-icon class="socials-icon" [icon]="github"></fa-icon>
+            <a class="socials-links link-style-green" (mousedown)="goToLink($event, 'https://github.com/HannesStark')">
+              <fa-icon class="link-icon-style-green" [icon]="github"></fa-icon>
               GitHub
             </a>
-            <a class="socials-links link-style"
+            <a class="socials-links link-style-green"
                (mousedown)="goToLink($event, 'https://www.linkedin.com/in/hannes-stark/')">
-              <fa-icon class="socials-icon" [icon]="linkedin"></fa-icon>
+              <fa-icon class="link-icon-style-green" [icon]="linkedin"></fa-icon>
               LinkedIn
             </a>
-            <a class="socials-links link-style" (mousedown)="goToLink($event, 'https://twitter.com/HannesStaerk')">
-              <fa-icon class="socials-icon" [icon]="twitter"></fa-icon>
+            <a class="socials-links link-style-green" (mousedown)="goToLink($event, 'https://twitter.com/HannesStaerk')">
+              <fa-icon class="link-icon-style-green" [icon]="twitter"></fa-icon>
               Twitter
             </a>
-            <a class="socials-links link-style" (mousedown)="goToPage($event, 'mailto:hannes.staerk@gmail.com')">
-              <fa-icon class="socials-icon" [icon]="mail"></fa-icon>
+            <a class="socials-links link-style-green" (mousedown)="goToPage($event, 'mailto:hannes.staerk@gmail.com')">
+              <fa-icon class="link-icon-style-green" [icon]="mail"></fa-icon>
               hannes.staerk@gmail.com
             </a>
           </div>
@@ -80,13 +80,13 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">M.Sc. Computer Science</a>
               <div fxLayout="row">
-                <h3 class="item-subtitle link-style" (mousedown)="goToLink($event, 'https://www.tum.de/en/')">Technical
+                <h3 class="item-subtitle link-style-green" (mousedown)="goToLink($event, 'https://www.tum.de/en/')">Technical
                   University
                   Munich</h3>
               </div>
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                2019 - 2020
+                Oct 2019 - Sept 2021
                 <a fxHide.xs>
                   <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
                   Munich, Germany
@@ -98,7 +98,7 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">B.Sc. Computer Science</a>
               <div fxLayout="row">
-                <h3 class="item-subtitle link-style" (mousedown)="goToLink($event, 'https://www.unibw.de/home-en')">
+                <h3 class="item-subtitle link-style-green" (mousedown)="goToLink($event, 'https://www.unibw.de/home-en')">
                   Bundeswehr Univsersity Munich</h3>
               </div>
               <p class="item-date-loc">
@@ -163,7 +163,7 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Teaching Assistant for Introduction to Deep Learning</a>
               <div fxLayout="row">
-                <h3 (mousedown)="goToLink($event, 'https://www.niessnerlab.org/')" class="item-subtitle link-style">
+                <h3 (mousedown)="goToLink($event, 'https://www.niessnerlab.org/')" class="item-subtitle link-style-green">
                   Niessnerlab at TUM</h3>
               </div>
               <p class="item-date-loc">
@@ -180,7 +180,7 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Mathematics Lecturer</a>
               <div fxLayout="row">
-                <h3 class="item-subtitle link-style" (mousedown)="goToLink($event, 'https://www.bibaugsburg.de/')">BIB
+                <h3 class="item-subtitle link-style-green" (mousedown)="goToLink($event, 'https://www.bibaugsburg.de/')">BIB
                   Augsburg
                   gGmbH</h3>
               </div>
@@ -198,7 +198,7 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Student Assistant at Chair of Operations Research</a>
               <div fxLayout="row">
-                <h3 class="item-subtitle link-style" (mousedown)="goToLink($event, 'https://www.unibw.de/home-en')">
+                <h3 class="item-subtitle link-style-green" (mousedown)="goToLink($event, 'https://www.unibw.de/home-en')">
                   Bundeswehr
                   University Munich</h3>
               </div>
@@ -216,7 +216,7 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Dual Study Program</a>
               <div fxLayout="row">
-                <h3 class="item-subtitle link-style"
+                <h3 class="item-subtitle link-style-green"
                     (mousedown)="goToLink($event, 'https://www.allianzdeutschland.de/')">Allianz
                   Deutschland AG</h3>
               </div>
@@ -265,7 +265,7 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">IDP Bioinformatics</a>
               <div fxLayout="row">
-                <h3 (mousedown)="goToLink($event, 'https://www.rostlab.org/')" class="item-subtitle link-style">Rostlab
+                <h3 (mousedown)="goToLink($event, 'https://www.rostlab.org/')" class="item-subtitle link-style-green">Rostlab
                   at TUM</h3>
               </div>
               <p class="item-date-loc">
@@ -278,18 +278,18 @@
               </p>
               <p class="item-content">I use statistical learning methods from natural language processing to predict
                 where a protein occurs in a cell. My method outperforms the previous state of the art in terms of
-                accuracy and speed. I am currently writing a paper about it. You can already check out all the code on
-                <a class="link-style"
-                   (mousedown)="goToLink($event, 'https://github.com/HannesStark/protein-localization')">GitHub
-                  <fa-icon [icon]="github"></fa-icon>
-                </a>.
+                accuracy and speed. I am currently writing a paper about it. You can already check out the
+                <a class="link-style-orange"
+                   (mousedown)="goToLink($event, 'https://github.com/HannesStark/protein-localization')">project
+                  <fa-icon class="link-icon-style-orange" [icon]="github"></fa-icon>
+                </a> and reproduce all the results.
               </p>
             </div>
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Guided Research Computer Vision</a>
               <div fxLayout="row">
-                <h3 (mousedown)="goToLink($event, 'https://www.niessnerlab.org/')" class="item-subtitle link-style">
+                <h3 (mousedown)="goToLink($event, 'https://www.niessnerlab.org/')" class="item-subtitle link-style-green">
                   Niessnerlab at TUM</h3>
               </div>
               <p class="item-date-loc">
@@ -304,15 +304,14 @@
                 human. These radiance fields can capture a scene with a low amount of images and then render images from
                 a new unseen viewpoint that did not exist in the original images. Our method added the ability to also
                 change the pose of the human such that you can, for instance, make him walk. Check out the
-                project on
-                <a class="link-style"
-                   (mousedown)="goToLink($event, 'https://github.com/HannesStark/SMPLNeRF')">GitHub
-                  <fa-icon [icon]="github"></fa-icon>
+                <a class="link-style-orange"
+                   (mousedown)="goToLink($event, 'https://github.com/HannesStark/SMPLNeRF')">project
+                  <fa-icon class="link-icon-style-orange" [icon]="github"></fa-icon>
                 </a>
                 or the
-                <a class="link-style"
+                <a class="link-style-orange"
                    (mousedown)="pdf($event, '/assets/NeRF for Novel View and Human Pose Synthesis.pdf')">paper
-                  <fa-icon [icon]="paper"></fa-icon>
+                  <fa-icon class="link-icon-style-orange" [icon]="paper"></fa-icon>
                 </a>
                 .
               </p>
@@ -322,7 +321,7 @@
               <a class="item-title">Survey Paper on Transformers</a>
               <div fxLayout="row">
                 <h3 (mousedown)="goToLink($event, 'https://www.in.tum.de/daml/startseite/')"
-                    class="item-subtitle link-style">
+                    class="item-subtitle link-style-green">
                   Data Analytics and Machine Learning Group at TUM</h3>
               </div>
               <p class="item-date-loc">
@@ -336,9 +335,9 @@
               <p class="item-content">Transformers are a machine learning method that is the state of the art for many
                 natural language processing tasks but are currently also finding a lot of success in other fields.
                 Check out the
-                <a class="link-style"
+                <a class="link-style-orange"
                    (mousedown)="pdf($event, '/assets/transformer_survey.pdf')">paper
-                  <fa-icon [icon]="paper"></fa-icon>
+                  <fa-icon class="link-icon-style-orange" [icon]="paper"></fa-icon>
                 </a>
                 that explains the architecture, its properties and the main applications in detail.
               </p>
@@ -347,12 +346,12 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Thinktank: Psychological counseling for students - App Coach PTBS</a>
               <div fxLayout="row">
-                <h3 class="item-subtitle link-style" (mousedown)="goToLink($event, 'https://www.unibw.de/home-en')">
+                <h3 class="item-subtitle link-style-green" (mousedown)="goToLink($event, 'https://www.unibw.de/home-en')">
                   Bundeswehr
                   Univsersity Munich</h3>
               </div>
               <p class="item-date-loc">
-                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                <fa-icon  class="icon-right-margin" [icon]="calendar"></fa-icon>
                 April 2018 - July 2018
                 <a fxHide.xs>
                   <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
@@ -362,16 +361,16 @@
               <p class="item-content">We developed the concept for the mobile App "Coach PTBS" where we came up with a
                 design and wrote a prototype. The app strives to help and inform about forms of psychological distress
                 and is an always accessible tool to easily contact help.
-                Check out the final app
-                <a class="link-style"
-                   (mousedown)="goToLink($event, 'https://www.unibw.de/campusleben/beratungsangebote/coachptbs/view')">here</a>.
+                Check out the final
+                <a class="link-style-orange"
+                   (mousedown)="goToLink($event, 'https://www.unibw.de/campusleben/beratungsangebote/coachptbs/view')">app</a>.
               </p>
             </div>
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Talent base Memmingen: Physics</a>
               <div fxLayout="row">
-                <h3 class="item-subtitle link-style"
+                <h3 class="item-subtitle link-style-green"
                     (mousedown)="goToLink($event, 'https://bsg-mm.de/begabungsstuetzpunkt/')">
                   Talent
                   Base Memmingen</h3>
@@ -422,7 +421,7 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Gymnastics Referee</a>
               <div fxLayout="row">
-                <h3 (mousedown)="goToLink($event, 'https://www.dtb.de/')" class="item-subtitle link-style">German
+                <h3 (mousedown)="goToLink($event, 'https://www.dtb.de/')" class="item-subtitle link-style-green">German
                   Gymnastics
                   Association DTB</h3>
               </div>
@@ -439,7 +438,7 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Gymnastics and Acrobatics Trainer</a>
               <div fxLayout="row">
-                <h3 (mousedown)="goToLink($event, 'http://vfl-buchloe.de/')" class="item-subtitle link-style">VfL
+                <h3 (mousedown)="goToLink($event, 'http://vfl-buchloe.de/')" class="item-subtitle link-style-green">VfL
                   Buchloe</h3>
               </div>
               <p class="item-date-loc">
@@ -452,7 +451,7 @@
               </p>
               <p class="item-content">I have trained gymnastics groups of all ages from kids to adults. Besides that
                 I am in the acrobatics team
-                <a class="link-style"
+                <a class="link-style-orange"
                    (mousedown)="goToLink($event, 'https://akrobatikastralbuchloe.com/')">Akrobatik Astral</a>
                 where we choreograph and organize shows for national (and occasionally international) events and
                 competitions.
