--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -11,7 +11,7 @@
           <h1 class="left-titles">M. Sc. Computer Science Student</h1>
         </div>
         -->
-        <div class="item"  fxLayout="column" fxLayoutAlign.lt-md="center center">
+        <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
           <p class="text-align-left">
             Hi there! I am a 21 years old M. Sc. Computer Science student from Germany at TU Munich.
             <br>
@@ -36,7 +36,8 @@
               <fa-icon class="link-icon-style-green" [icon]="linkedin"></fa-icon>
               LinkedIn
             </a>
-            <a class="socials-links link-style-green" (mousedown)="goToLink($event, 'https://twitter.com/HannesStaerk')">
+            <a class="socials-links link-style-green"
+               (mousedown)="goToLink($event, 'https://twitter.com/HannesStaerk')">
               <fa-icon class="link-icon-style-green" [icon]="twitter"></fa-icon>
               Twitter
             </a>
@@ -68,10 +69,12 @@
           </div>
         </div>
       </div>
-      <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title" fxLayoutAlign="center center">
+      <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title"
+           fxLayoutAlign="center center">
         <h1 class="left-titles">EDUCATION</h1>
       </div>
-      <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign.lt-md="center center"
+      <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column"
+           fxLayoutAlign.lt-md="center center"
            fxLayoutAlign="center start">
         <div fxFlex="30" fxLayoutAlign="end start" fxLayoutAlign.lt-md="center center">
         </div>
@@ -80,7 +83,8 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">M.Sc. Computer Science</a>
               <div fxLayout="row">
-                <h3 class="item-subtitle link-style-green" (mousedown)="goToLink($event, 'https://www.tum.de/en/')">Technical
+                <h3 class="item-subtitle link-style-green" (mousedown)="goToLink($event, 'https://www.tum.de/en/')">
+                  Technical
                   University
                   Munich</h3>
               </div>
@@ -98,7 +102,8 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">B.Sc. Computer Science</a>
               <div fxLayout="row">
-                <h3 class="item-subtitle link-style-green" (mousedown)="goToLink($event, 'https://www.unibw.de/home-en')">
+                <h3 class="item-subtitle link-style-green"
+                    (mousedown)="goToLink($event, 'https://www.unibw.de/home-en')">
                   Bundeswehr Univsersity Munich</h3>
               </div>
               <p class="item-date-loc">
@@ -151,10 +156,12 @@
           </div>
         </div>
       </div>
-      <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title" fxLayoutAlign="center center">
+      <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title"
+           fxLayoutAlign="center center">
         <h1 class="left-titles">PROFESSIONAL</h1>
       </div>
-      <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign.lt-md="center center"
+      <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column"
+           fxLayoutAlign.lt-md="center center"
            fxLayoutAlign="center start">
         <div fxFlex="30" fxLayoutAlign="end start" fxLayoutAlign.lt-md="center center">
         </div>
@@ -163,7 +170,8 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Teaching Assistant for Introduction to Deep Learning</a>
               <div fxLayout="row">
-                <h3 (mousedown)="goToLink($event, 'https://www.niessnerlab.org/')" class="item-subtitle link-style-green">
+                <h3 (mousedown)="goToLink($event, 'https://www.niessnerlab.org/')"
+                    class="item-subtitle link-style-green">
                   Niessnerlab at TUM</h3>
               </div>
               <p class="item-date-loc">
@@ -180,7 +188,8 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Mathematics Lecturer</a>
               <div fxLayout="row">
-                <h3 class="item-subtitle link-style-green" (mousedown)="goToLink($event, 'https://www.bibaugsburg.de/')">BIB
+                <h3 class="item-subtitle link-style-green"
+                    (mousedown)="goToLink($event, 'https://www.bibaugsburg.de/')">BIB
                   Augsburg
                   gGmbH</h3>
               </div>
@@ -198,7 +207,8 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Student Assistant at Chair of Operations Research</a>
               <div fxLayout="row">
-                <h3 class="item-subtitle link-style-green" (mousedown)="goToLink($event, 'https://www.unibw.de/home-en')">
+                <h3 class="item-subtitle link-style-green"
+                    (mousedown)="goToLink($event, 'https://www.unibw.de/home-en')">
                   Bundeswehr
                   University Munich</h3>
               </div>
@@ -253,10 +263,12 @@
           </div>
         </div>
       </div>
-      <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title" fxLayoutAlign="center center">
+      <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title"
+           fxLayoutAlign="center center">
         <h1 class="left-titles">PROJECTS</h1>
       </div>
-      <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign.lt-md="center center"
+      <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column"
+           fxLayoutAlign.lt-md="center center"
            fxLayoutAlign="center start">
         <div fxFlex="30" fxLayoutAlign="end start" fxLayoutAlign.lt-md="center center">
         </div>
@@ -265,7 +277,8 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">IDP Bioinformatics</a>
               <div fxLayout="row">
-                <h3 (mousedown)="goToLink($event, 'https://www.rostlab.org/')" class="item-subtitle link-style-green">Rostlab
+                <h3 (mousedown)="goToLink($event, 'https://www.rostlab.org/')" class="item-subtitle link-style-green">
+                  Rostlab
                   at TUM</h3>
               </div>
               <p class="item-date-loc">
@@ -289,7 +302,8 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Guided Research Computer Vision</a>
               <div fxLayout="row">
-                <h3 (mousedown)="goToLink($event, 'https://www.niessnerlab.org/')" class="item-subtitle link-style-green">
+                <h3 (mousedown)="goToLink($event, 'https://www.niessnerlab.org/')"
+                    class="item-subtitle link-style-green">
                   Niessnerlab at TUM</h3>
               </div>
               <p class="item-date-loc">
@@ -300,21 +314,32 @@
                   Munich, Germany
                 </a>
               </p>
-              <p class="item-content">We used Neural Radiance Fields to render novel views of a scene containing a
-                human. These radiance fields can capture a scene with a low amount of images and then render images from
-                a new unseen viewpoint that did not exist in the original images. Our method added the ability to also
-                change the pose of the human such that you can, for instance, make him walk. Check out the
-                <a class="link-style-orange"
-                   (mousedown)="goToLink($event, 'https://github.com/HannesStark/SMPLNeRF')">project
-                  <fa-icon class="link-icon-style-orange" [icon]="github"></fa-icon>
-                </a>
-                or the
-                <a class="link-style-orange"
-                   (mousedown)="pdf($event, '/assets/NeRF for Novel View and Human Pose Synthesis.pdf')">paper
-                  <fa-icon class="link-icon-style-orange" [icon]="paper"></fa-icon>
-                </a>
-                .
-              </p>
+              <div fxLayout="column">
+                <div>
+                  <p class="item-content">We used Neural Radiance Fields to render novel views of a scene containing a
+                    human. These radiance fields can capture a scene with a low amount of images and then render images
+                    from
+                    a new unseen viewpoint that did not exist in the original images. Our method added the ability to
+                    also
+                    change the pose of the human such that you can, for instance, make him walk. Check out the
+                    <a class="link-style-orange"
+                       (mousedown)="goToLink($event, 'https://github.com/HannesStark/SMPLNeRF')">project
+                      <fa-icon class="link-icon-style-orange" [icon]="github"></fa-icon>
+                    </a>
+                    or the
+                    <a class="link-style-orange"
+                       (mousedown)="pdf($event, '/assets/NeRF for Novel View and Human Pose Synthesis.pdf')">paper
+                      <fa-icon class="link-icon-style-orange" [icon]="paper"></fa-icon>
+                    </a>
+                    .
+                  </p>
+                </div>
+                <div class="video-container">
+                  <div class="responsive video">
+                    <iframe [src]='safeURL' allowfullscreen></iframe>
+                  </div>
+                </div>
+              </div>
             </div>
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
@@ -346,12 +371,13 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Thinktank: Psychological counseling for students - App Coach PTBS</a>
               <div fxLayout="row">
-                <h3 class="item-subtitle link-style-green" (mousedown)="goToLink($event, 'https://www.unibw.de/home-en')">
+                <h3 class="item-subtitle link-style-green"
+                    (mousedown)="goToLink($event, 'https://www.unibw.de/home-en')">
                   Bundeswehr
                   Univsersity Munich</h3>
               </div>
               <p class="item-date-loc">
-                <fa-icon  class="icon-right-margin" [icon]="calendar"></fa-icon>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 April 2018 - July 2018
                 <a fxHide.xs>
                   <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
@@ -409,10 +435,12 @@
           </div>
         </div>
       </div>
-      <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title" fxLayoutAlign="center center">
+      <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title"
+           fxLayoutAlign="center center">
         <h1 class="left-titles">ACTIVITIES</h1>
       </div>
-      <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign.lt-md="center center"
+      <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column"
+           fxLayoutAlign.lt-md="center center"
            fxLayoutAlign="center start">
         <div fxFlex="30" fxLayoutAlign="end start" fxLayoutAlign.lt-md="center center">
         </div>
