--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -374,7 +374,7 @@
                 <h3 class="item-subtitle link-style-green"
                     (mousedown)="goToLink($event, 'https://www.unibw.de/home-en')">
                   Bundeswehr
-                  Univsersity Munich</h3>
+                  University Munich</h3>
               </div>
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
